// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`localsConvention option asIs: errors 1`] = `Array []`;

exports[`localsConvention option asIs: locals 1`] = `
Object {
  "btn--info_is-disabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "btn-info_is-disabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "foo": "bar",
  "my-btn-info_is-disabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option asIs: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option asIs: warnings 1`] = `Array []`;

exports[`localsConvention option camelCase: errors 1`] = `Array []`;

exports[`localsConvention option camelCase: locals 1`] = `
Object {
  "btn--info_is-disabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "btn-info_is-disabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfoIsDisabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfoIsDisabled1": "aF9yrid0BHOaiL3bSWCyJ",
  "foo": "bar",
  "my-btn-info_is-disabled": "value",
  "myBtnInfoIsDisabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option camelCase: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option camelCase: warnings 1`] = `Array []`;

exports[`localsConvention option camelCaseOnly: errors 1`] = `Array []`;

exports[`localsConvention option camelCaseOnly: locals 1`] = `
Object {
  "btnInfoIsDisabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfoIsDisabled1": "aF9yrid0BHOaiL3bSWCyJ",
  "foo": "bar",
  "myBtnInfoIsDisabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option camelCaseOnly: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option camelCaseOnly: warnings 1`] = `Array []`;

exports[`localsConvention option dashes: errors 1`] = `Array []`;

exports[`localsConvention option dashes: locals 1`] = `
Object {
  "btn--info_is-disabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "btn-info_is-disabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfo_isDisabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfo_isDisabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "foo": "bar",
  "my-btn-info_is-disabled": "value",
  "myBtnInfo_isDisabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option dashes: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option dashes: warnings 1`] = `Array []`;

exports[`localsConvention option dashesOnly: errors 1`] = `Array []`;

exports[`localsConvention option dashesOnly: locals 1`] = `
Object {
  "btnInfo_isDisabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "btnInfo_isDisabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "foo": "bar",
  "myBtnInfo_isDisabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option dashesOnly: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option dashesOnly: warnings 1`] = `Array []`;

exports[`localsConvention option not specified: errors 1`] = `Array []`;

exports[`localsConvention option not specified: locals 1`] = `
Object {
  "btn--info_is-disabled_1": "aF9yrid0BHOaiL3bSWCyJ",
  "btn-info_is-disabled": "_2HovG-ymIjf-Q-jdQr_LQ-",
  "foo": "bar",
  "my-btn-info_is-disabled": "value",
  "simple": "_2UqJ0qi8H2Q5R46tr_dUvz",
}
`;

exports[`localsConvention option not specified: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "._2HovG-ymIjf-Q-jdQr_LQ- {
  color: blue;
}

.aF9yrid0BHOaiL3bSWCyJ {
  color: blue;
}

._2UqJ0qi8H2Q5R46tr_dUvz {
  color: red;
}

a {
  color: yellow;
}
",
    "",
  ],
]
`;

exports[`localsConvention option not specified: warnings 1`] = `Array []`;
